--- a/src/raven/application/form/other/FormDashboard.form
+++ b/src/raven/application/form/other/FormDashboard.form
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[818, 486]"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -18,12 +23,12 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="Bar" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jPanel2" max="32767" attributes="0"/>
                   <Component id="filtroBar" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -31,11 +36,11 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="Bar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Component id="filtroBar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Component id="jPanel2" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -129,21 +134,24 @@
                   <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jComboBox1" min="-2" pref="167" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="filtroPanel" min="-2" pref="167" max="-2" attributes="0"/>
+                  <EmptySpace pref="499" max="32767" attributes="0"/>
                   <Component id="jButton2" min="-2" pref="91" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
+              <Component id="hostBar" alignment="1" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  <Component id="hostBar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="filtroPanel" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -156,31 +164,92 @@
             <Property name="text" type="java.lang.String" value="Filtros:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JButton" name="jButton2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Atualizar"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="filtroPanel">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="6">
+              <StringArray count="7">
                 <StringItem index="0" value="Todos"/>
-                <StringItem index="1" value="Em atendimento (atribu&#xed;do)"/>
-                <StringItem index="2" value="Em atendimento (planejado)"/>
-                <StringItem index="3" value="Pendente"/>
-                <StringItem index="4" value="Solucionado"/>
-                <StringItem index="5" value="Fechado"/>
+                <StringItem index="1" value="Novo"/>
+                <StringItem index="2" value="Em Andamento (atribu&#xed;do)"/>
+                <StringItem index="3" value="Em Andamento (planejado)"/>
+                <StringItem index="4" value="Pendente"/>
+                <StringItem index="5" value="Solucionado"/>
+                <StringItem index="6" value="Fechado"/>
               </StringArray>
+            </Property>
+            <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="&quot;Novo&quot;" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Atualizar"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
-          </Events>
-        </Component>
+        <Container class="javax.swing.JPanel" name="hostBar">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="Color corFundox = new Color(39, 44, 54); // Vermelho&#xa;hostBar.setBackground(corFundox);"/>
+          </AuxValues>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="hostname" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="hostname" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JLabel" name="jLabel5">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="1"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="c1" red="9" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Hostname:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel6">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="TechSize Client"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="hostname">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="host"/>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel2">
@@ -188,17 +257,21 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="788" max="32767" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jScrollPane1" pref="818" max="32767" attributes="0"/>
+                      <Component id="bottomBar" alignment="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jScrollPane1" pref="414" max="32767" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="389" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                  <Component id="bottomBar" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -219,9 +292,51 @@
                 <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="// Create a custom cell renderer for the &quot;Status&quot; column&#xa;        chamados.setDefaultRenderer(Object.class, new DefaultTableCellRenderer() {&#xa;            {&#xa;                setHorizontalAlignment(SwingConstants.CENTER);&#xa;            }&#xa;&#xa;            @Override&#xa;            public Component getTableCellRendererComponent(&#xa;                    JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {&#xa;                Component component = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);&#xa;&#xa;                // Check if the row has content&#xa;                boolean hasContent = false;&#xa;                for (int col = 0; col &lt; table.getColumnCount(); col++) {&#xa;                    if (table.getValueAt(row, col) != null) {&#xa;                        hasContent = true;&#xa;                        break;&#xa;                    }&#xa;                }&#xa;&#xa;                // Set the background color based on whether the row has content&#xa;                if (hasContent) {&#xa;                    component.setBackground(new Color(0xC3D7EF));&#xa;                    // Set the left border for the first column&#xa;                    if (column == 0 &amp;&amp; component instanceof JComponent) {&#xa;                        Border border = BorderFactory.createMatteBorder(0, 3, 0, 0, new Color(0x00E300));&#xa;                        ((JComponent) component).setBorder(border);&#xa;                    }&#xa;                } else {&#xa;                    component.setBackground(table.getBackground());&#xa;                    if (component instanceof JComponent) {&#xa;                        ((JComponent) component).setBorder(null); // Remove border for cells without content&#xa;                    }&#xa;                }&#xa;&#xa;                // Set the text color to black&#xa;                component.setForeground(Color.BLACK);&#xa;&#xa;                // Replace the status value with the corresponding string from the map&#xa;                if (column == 2 &amp;&amp; value != null) { // Assuming &quot;Status&quot; column is at index 2&#xa;                    int statusValue = Integer.parseInt(value.toString());&#xa;                    String statusString = Dicio.getStatus(statusValue);&#xa;                    if (statusString != null) {&#xa;                        setText(statusString);&#xa;                    }&#xa;                }&#xa;&#xa;                return component;&#xa;            }&#xa;        });&#xa;chamados.setRowHeight(40);&#xa;jScrollPane1.setViewportView(chamados);&#xa;chamados.setEnabled(false);"/>
+                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="// Create a custom cell renderer for the &quot;Status&quot; column&#xa;        chamados.setDefaultRenderer(Object.class, new DefaultTableCellRenderer() {&#xa;            {&#xa;                setHorizontalAlignment(SwingConstants.CENTER);&#xa;            }&#xa;&#xa;            @Override&#xa;            public Component getTableCellRendererComponent(&#xa;                    JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {&#xa;                Component component = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);&#xa;&#xa;                // Check if the row has content&#xa;                boolean hasContent = false;&#xa;                for (int col = 0; col &lt; table.getColumnCount(); col++) {&#xa;                    if (table.getValueAt(row, col) != null) {&#xa;                        hasContent = true;&#xa;                        break;&#xa;                    }&#xa;                }&#xa;&#xa;                // Set the background color based on whether the row has content&#xa;                if (hasContent) {&#xa;                    component.setBackground(new Color(0xC3D7EF));&#xa;                    // Set the left border for the first column&#xa;                    if (column == 0 &amp;&amp; component instanceof JComponent) {&#xa;                        Border border = BorderFactory.createMatteBorder(0, 3, 0, 0, new Color(0x00E300));&#xa;                        ((JComponent) component).setBorder(border);&#xa;                    }&#xa;                } else {&#xa;                    component.setBackground(table.getBackground());&#xa;                    if (component instanceof JComponent) {&#xa;                        ((JComponent) component).setBorder(null); // Remove border for cells without content&#xa;                    }&#xa;                }&#xa;&#xa;                // Set the text color to black&#xa;                component.setForeground(Color.BLACK);&#xa;&#xa;                // Replace the status value with the corresponding string from the map&#xa;                if (column == 2 &amp;&amp; value != null) { // Assuming &quot;Status&quot; column is at index 2&#xa;                    int statusValue = Integer.parseInt(value.toString());&#xa;                    String statusString = Dicio.getStatus(statusValue);&#xa;                    if (statusString != null) {&#xa;                        setText(statusString);&#xa;                    }&#xa;                }&#xa;&#xa;                return component;&#xa;            }&#xa;        });&#xa;chamados.setRowHeight(40);&#xa;jScrollPane1.setViewportView(chamados);&#xa;chamados.setEnabled(false);&#xa;chamados.setBorder(null);"/>
                 <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="FormDashboard_chamados"/>
               </AuxValues>
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JPanel" name="bottomBar">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="bottomBar.setBackground(corFundox);"/>
+          </AuxValues>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JLabel" name="jLabel3">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Chamados"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel4">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="v1.0.1"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
